# studio_app

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  package.json  rust-toolchain.toml
app/: .env.example  .gitignore  Cargo.toml  Trunk.toml  app.css  index.html  package-lock.json  package.json  tailwind.config.js
app/assets/: styles.css
app/i18n/: id_salt.txt
app/i18n/locales/en/: messages.mf2
app/src/: app.rs  bootstrap.rs  config.rs  config_flow.rs  configuration.rs  context.rs  data.rs  entry.rs  health.rs  health_ui.rs  i18n.rs  init.rs  keystore.rs  lib.rs  logging.rs  logs.rs  notifications.rs  settings.rs  settings_status.rs  setup.rs  setup_flow.rs  setup_lock.rs  setup_status.rs  tangle.rs  theme.rs  ui_demo.rs
app/stylesheets/: apps-base.css  apps-ui.css  daisyui-theme-os.css  daisyui.css
crates/android/: Cargo.toml
crates/android/src/: country_lookup.rs  lib.rs  offline_geocoder.rs  remote_signer.rs  security.rs  storage.rs  vault.rs
crates/app-lib/: Cargo.toml
crates/app-lib/src/: browser.rs  dom.rs  fetch.rs  file.rs  geo.rs  lib.rs  locale.rs  path.rs  query.rs  sleep.rs  storage.rs  symbols.rs  theme.rs
crates/app-web/: Cargo.toml
crates/app-web/src/: lib.rs  main.rs
crates/apple/security/: Cargo.toml  build.rs
crates/apple/security/src/: lib.rs  security.rs  vault.rs
crates/core/: Cargo.toml
crates/core/src/: home_location_tools.rs  lib.rs  location_resolver.rs  offline_geocoder.rs  remote_signer.rs
crates/core/src/backup/: bundle.rs  codec.rs  error.rs  mod.rs  types.rs
crates/core/src/cipher/: error.rs  mod.rs  types.rs
crates/core/src/crypto/: envelope.rs  error.rs  kdf.rs  keys.rs  mod.rs  provider.rs  random.rs  registry.rs  service.rs  types.rs
crates/core/src/datastore/: error.rs  mod.rs  types.rs  web.rs
crates/core/src/fs/: error.rs  mod.rs  types.rs
crates/core/src/geolocation/: error.rs  mod.rs  types.rs  web.rs
crates/core/src/home_location_tools/: mod.rs
crates/core/src/idb/: config.rs  encrypted_store.rs  error.rs  keyval.rs  mod.rs  store.rs  types.rs  value.rs
crates/core/src/keystore/: error.rs  mod.rs  types.rs  web.rs  web_nostr.rs
crates/core/src/notifications/: error.rs  mod.rs  types.rs  web.rs
crates/core/src/radroots/: error.rs  mod.rs  types.rs  web.rs
crates/core/src/sql/: error.rs  mod.rs  types.rs  web.rs
crates/core/src/tangle/: error.rs  mod.rs  types.rs  web.rs
crates/desktop/: Cargo.toml  build.rs
crates/desktop/src/: accounts.rs  app.rs  lib.rs  main.rs  menus.rs  offline_geocoder.rs  pack_day_host_handoff.rs  pack_day_print.rs  remote_signer.rs  runtime.rs  source_guards.rs  window.rs
crates/ios/: Cargo.toml
crates/ios/src/: lib.rs  offline_geocoder.rs  remote_signer.rs  reverse_lookup.rs  security.rs  storage.rs  vault.rs
crates/launchers/android/: Cargo.toml
crates/launchers/android/src/: lib.rs  offline_geocoder.rs  remote_signer.rs  reverse_lookup.rs  (+1 more)
crates/launchers/desktop/: Cargo.toml  build.rs
crates/remote-signer/: Cargo.toml
crates/remote-signer/src/: action.rs  controller.rs  custody.rs  error.rs  input.rs  lib.rs  protocol.rs  session.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  logging.rs  pack_day_export.rs  paths.rs  runtime.rs  sdk.rs
crates/shared/core/: Cargo.toml
crates/shared/i18n/: Cargo.toml  build.rs
crates/shared/sqlite/: Cargo.toml
crates/shared/state/: Cargo.toml
crates/signer/: Cargo.toml
crates/signer/src/: input.rs  lib.rs  protocol.rs  session.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/store/: Cargo.toml
crates/store/migrations/: 0001_init.sql  0002_activity_journal.sql  0004_account_farm_setup.sql  0005_products_workflow.sql  0006_farm_rules_workspace.sql  0008_orders_and_pack_day.sql  0010_sync_contract_alignment.sql  0011_reminders.sql  0011_reminders_and_recovery.sql  0012_local_interop_imports.sql  0013_local_interop_projection_cursor.sql  0014_buyer_order_coordination.sql  0015_buyer_order_listing_identity.sql  0016_deterministic_outbox.sql  0019_relay_ingest_freshness.sql  0020_declined_order_status.sql  0021_local_interop_signed_event_evidence.sql  0022_order_workflow_revision.sql  0023_order_workflow_display_projection.sql  0024_order_workflow_payment_display_states.sql  0025_order_receipt_display_projection.sql  0025_order_workflow_agreement_projection.sql  0026_order_validation_receipt_projection.sql  0027_local_interop_validation_receipt_projection_kind.sql  0028_runtime_workflow_receipts.sql  0028_sdk_migration_receipts.sql  0028_sdk_workflow_receipts.sql  0029_order_workflow_pending_rhi_agreement.sql  0029_order_workflow_validation_receipt_agreement.sql  0030_buyer_order_public_note_confirmation.sql  0031_drop_default_buyer_private_fields.sql
crates/store/src/: activation.rs  activity.rs  buyer.rs  db.rs  error.rs  interop.rs  lib.rs  local_interop.rs  migration_audit.rs  migrations.rs  orders.rs  products.rs  reminders.rs  runtime_workflow_receipts.rs  sdk_migration_receipts.rs  sdk_workflow_receipts.rs  source_guards.rs  sync.rs  today.rs
crates/sync/: Cargo.toml
crates/sync/src/: lib.rs  publish.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
crates/test_support/: Cargo.toml
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/ui-components/: Cargo.toml
crates/ui-components/assets/: form.css  list.css  nav.css  nav_tabs.css
crates/ui-components/src/: button.rs  button_layout.rs  dialog.rs  form.rs  icon.rs  label.rs  lib.rs  list.rs  list_types.rs  nav_header.rs  nav_tabs.rs  scroll.rs  separator.rs  sheet.rs  spinner.rs
crates/ui-core/: Cargo.toml
crates/ui-core/src/: event.rs  id.rs  input.rs  lib.rs  preference.rs
crates/ui-primitives/: Cargo.toml
crates/ui-primitives/src/: aria_hidden.rs  dismissable.rs  focus.rs  lib.rs  portal.rs  presence.rs  roving_focus.rs  scroll_lock.rs
crates/utils/: Cargo.toml
crates/utils/src/: error.rs  errors.rs  lib.rs  types.rs
crates/view/: Cargo.toml
crates/view/src/: lib.rs
crates/web/: Cargo.toml  index.html
crates/web/src/: lib.rs
(+179 files in other folders)
