[workspace]
members = [
    "crates/shared/core",
    "crates/shared/i18n",
    "crates/shared/models",
    "crates/shared/sqlite",
    "crates/shared/state",
    "crates/shared/ui",
    "crates/launchers/desktop",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Radroots Authors"]
rust-version = "1.92.0"
license = "GPL-3.0-or-later"
repository = "https://github.com/radrootslabs/studio_app"
homepage = "https://radroots.org"
readme = "README.md"

[workspace.dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
hex = "0.4"
mf2-i18n-build = { path = "../../../../vendor/triesap/mf2-i18n/crates/mf2-i18n-build", version = "0.1.0" }
mf2-i18n-core = { path = "../../../../vendor/triesap/mf2-i18n/crates/mf2-i18n-core", version = "0.1.0" }
mf2-i18n-native = { path = "../../../../vendor/triesap/mf2-i18n/crates/mf2-i18n-native", version = "0.1.0" }
radroots_studio_app_core = { path = "crates/shared/core", version = "0.1.0" }
radroots_studio_app_i18n = { path = "crates/shared/i18n", version = "0.1.0" }
radroots_studio_app_models = { path = "crates/shared/models", version = "0.1.0" }
radroots_studio_app_sqlite = { path = "crates/shared/sqlite", version = "0.1.0" }
radroots_studio_app_state = { path = "crates/shared/state", version = "0.1.0" }
radroots_studio_app_ui = { path = "crates/shared/ui", version = "0.1.0" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
toml = "0.8"
uuid = { version = "1", features = ["serde", "v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"
