[workspace]
members = [
    "crates/shared/core",
    "crates/shared/i18n",
    "crates/shared/models",
    "crates/shared/remote_signer",
    "crates/shared/sqlite",
    "crates/shared/state",
    "crates/shared/sync",
    "crates/shared/ui",
    "crates/launchers/desktop",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Radroots Authors"]
rust-version = "1.92.0"
license = "GPL-3.0-or-later"
repository = "https://github.com/radrootslabs/studio_app"
homepage = "https://radroots.org"
readme = "README.md"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
mf2_i18n = { path = "../../../../vendor/triesap/mf2_i18n/crates/mf2_i18n" }
radroots_identity = { path = "../lib/crates/identity" }
radroots_nostr = { path = "../lib/crates/nostr", features = ["client"] }
radroots_nostr_accounts = { path = "../lib/crates/nostr_accounts" }
radroots_nostr_connect = { path = "../lib/crates/nostr_connect" }
radroots_protected_store = { path = "../lib/crates/protected_store" }
radroots_secret_vault = { path = "../lib/crates/secret_vault", default-features = false, features = ["std"] }
radroots_studio_app_core = { path = "crates/shared/core", version = "0.1.0" }
radroots_studio_app_i18n = { path = "crates/shared/i18n", version = "0.1.0" }
radroots_studio_app_models = { path = "crates/shared/models", version = "0.1.0" }
radroots_studio_app_sqlite = { path = "crates/shared/sqlite", version = "0.1.0" }
radroots_studio_app_state = { path = "crates/shared/state", version = "0.1.0" }
radroots_studio_app_sync = { path = "crates/shared/sync", version = "0.1.0" }
radroots_studio_app_ui = { path = "crates/shared/ui", version = "0.1.0" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"
