[workspace]
members = [
    "crates/runtime",
    "crates/i18n",
    "crates/types",
    "crates/view",
    "crates/signer",
    "crates/store",
    "crates/state",
    "crates/sync",
    "crates/ui",
    "crates/desktop",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Radroots Authors"]
rust-version = "1.92.0"
license = "GPL-3.0-or-later"
repository = "https://github.com/radrootslabs/studio_app"
homepage = "https://radroots.org"
readme = "README.md"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
mf2_i18n = { git = "https://github.com/triesap/mf2_i18n.git", rev = "e2ad58d5863d9dd98f2f38d1f08b2140bf34b0a1" }
radroots_core = { path = "../lib/crates/core", default-features = false, features = ["std"] }
radroots_events = { path = "../lib/crates/events", default-features = false, features = ["serde", "std"] }
radroots_events_codec = { path = "../lib/crates/events_codec", features = ["serde_json"] }
radroots_identity = { path = "../lib/crates/identity" }
radroots_local_events = { path = "../lib/crates/local_events", features = ["native"] }
radroots_nostr = { path = "../lib/crates/nostr", features = ["client"] }
radroots_nostr_accounts = { path = "../lib/crates/nostr_accounts" }
radroots_nostr_connect = { path = "../lib/crates/nostr_connect" }
radroots_protected_store = { path = "../lib/crates/protected_store" }
radroots_runtime_paths = { path = "../lib/crates/runtime_paths" }
radroots_secret_vault = { path = "../lib/crates/secret_vault", default-features = false, features = ["std"] }
radroots_sdk = { path = "../lib/crates/sdk", features = ["relay-client", "signing"] }
radroots_sql_core = { path = "../lib/crates/sql_core", features = ["native"] }
radroots_studio_app_core = { path = "crates/runtime", version = "0.1.0" }
radroots_studio_app_i18n = { path = "crates/i18n", version = "0.1.0" }
radroots_studio_app_types = { path = "crates/types", version = "0.1.0" }
radroots_studio_app_view = { path = "crates/view", version = "0.1.0" }
radroots_studio_app_sqlite = { path = "crates/store", version = "0.1.0" }
radroots_studio_app_state = { path = "crates/state", version = "0.1.0" }
radroots_studio_app_sync = { path = "crates/sync", version = "0.1.0" }
radroots_studio_app_ui = { path = "crates/ui", version = "0.1.0" }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt", "sync"] }
tokio-tungstenite = "0.26.2"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v5", "v7"] }

[workspace.lints.rust]
unsafe_code = "forbid"
