[package]
name = "radroots-app"
description = "GPUI desktop client for Radroots"
authors = ["Radroots Authors"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos_router = { workspace = true }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
futures.workspace = true
js-sys.workspace = true
web-sys.workspace = true
gloo-timers = { workspace = true, features = ["futures"] }
radroots-app-core = { path = "../crates/core" }
radroots-app-ui-components = { path = "../crates/ui-components" }
radroots-log = { path = "../refs/crates/log", default-features = false }
radroots-nostr = { workspace = true }
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
async-trait.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
radroots-log = { path = "../refs/crates/log", features = ["std"] }
chrono.workspace = true
