[package]
name = "radroots_studio_app_android"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rad Roots Android launcher"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { workspace = true, features = ["android-game-activity", "glow"] }
log.workspace = true
radroots_studio_app_core = { path = "../core" }
radroots_studio_app_remote_signer = { path = "../remote-signer" }
radroots_geocoder.workspace = true
radroots_identity.workspace = true
radroots_nostr_accounts = { workspace = true, features = ["memory-vault"] }
radroots_runtime_paths.workspace = true
radroots_secret_vault.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android_logger.workspace = true
jni.workspace = true
ndk-context.workspace = true
wgpu = { workspace = true, features = ["vulkan", "gles", "wgsl"] }
winit.workspace = true

[dev-dependencies]
radroots_studio_app_test_support = { path = "../test-support" }
