[package]
name = "radroots-app-web"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rad Roots app wasm launcher"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe.workspace = true
log.workspace = true
radroots-app = { path = "../app" }
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { workspace = true, features = ["std", "wgsl", "webgpu", "fragile-send-sync-non-atomic-wasm"] }

[lints]
workspace = true
