[package]
name = "radroots-app-core"
description = "Core application orchestration for Radroots Studio"
authors = ["Radroots Authors"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
getrandom = { workspace = true }
base64 = { workspace = true }
radroots-nostr = { workspace = true, features = ["client", "events"] }
url = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { workspace = true, features = ["bundled", "serialize"] }
radroots-sql-core = { workspace = true, features = ["native"] }
radroots-replica-db = { workspace = true }
radroots-replica-db-schema = { workspace = true }
radroots-replica-sync = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }

[dev-dependencies]
futures = "0.3"
