[package]
name = "radroots-app-desktop"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rad Roots desktop launcher"
publish = false
build = "build.rs"

[lints]
workspace = true

[dependencies]
directories.workspace = true
eframe = { workspace = true, features = ["wgpu", "wayland", "x11"] }
egui.workspace = true
image.workspace = true
log.workspace = true
radroots-app-core = { path = "../core" }
radroots-app-remote-signer = { path = "../remote-signer" }
radroots-geocoder.workspace = true
radroots-nostr-accounts = { workspace = true, features = ["memory-vault"] }
zeroize.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
wgpu = { workspace = true, features = ["metal", "wgsl"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { workspace = true, features = ["NSProcessInfo", "NSString"] }
radroots-app-apple-security.workspace = true
radroots-identity.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { workspace = true, features = ["dx12", "wgsl"] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
wgpu = { workspace = true, features = ["vulkan", "gles", "wgsl"] }

[dev-dependencies]
radroots-app-test-support = { path = "../test-support" }
