[package]
name = "radroots_studio_app"
description = "GPUI desktop client for Radroots"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
chrono.workspace = true
futures-util.workspace = true
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
radroots_core.workspace = true
radroots_event_codec.workspace = true
radroots_identity.workspace = true
radroots_nostr.workspace = true
radroots_nostr_accounts.workspace = true
radroots_protected_store.workspace = true
radroots_secret_vault.workspace = true
radroots_sdk.workspace = true
radroots_studio_app_core.workspace = true
radroots_studio_app_i18n.workspace = true
radroots_studio_app_view.workspace = true
radroots_studio_app_remote_signer = { path = "../signer" }
radroots_studio_app_sqlite.workspace = true
radroots_studio_app_state.workspace = true
radroots_studio_app_sync.workspace = true
radroots_studio_app_ui.workspace = true
radroots_event.workspace = true
radroots_runtime_store.workspace = true
radroots_sql_core.workspace = true
radroots_trade.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[lints]
workspace = true
