[package]
name = "radroots-app-ios"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rad Roots iOS launcher"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
eframe = { workspace = true, features = ["wgpu"] }
log.workspace = true
radroots-app-apple-security.workspace = true
radroots-app-core = { path = "../core" }
radroots-app-remote-signer = { path = "../remote-signer" }
radroots_geocoder.workspace = true
radroots_identity.workspace = true
radroots_nostr_accounts = { workspace = true, features = ["memory-vault"] }
radroots_runtime_paths.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "ios")'.dependencies]
wgpu = { workspace = true, features = ["metal", "wgsl"] }

[dev-dependencies]
radroots-app-test-support = { path = "../test-support" }
