[package]
name = "radroots_studio_app_ios"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rad Roots iOS launcher"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]

[dependencies]
eframe = { workspace = true, features = ["wgpu"] }
log.workspace = true
radroots_studio_app_apple_security.workspace = true
radroots_studio_app_core = { path = "../core" }
radroots_studio_app_remote_signer = { path = "../remote_signer" }
radroots_geocoder.workspace = true
radroots_identity.workspace = true
radroots_nostr_accounts = { workspace = true, features = ["memory-vault"] }
radroots_runtime_paths.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "ios")'.dependencies]
wgpu = { workspace = true, features = ["metal", "wgsl"] }

[dev-dependencies]
radroots_studio_app_test_support = { path = "../test_support" }
