[package]
name = "radroots-app-remote-signer"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "NIP-46 remote signer adapter for Radroots Studio"
publish = false

[lints]
workspace = true

[dependencies]
nostr = { workspace = true, features = ["nip44"] }
radroots-identity.workspace = true
radroots-nostr-accounts.workspace = true
radroots-nostr.workspace = true
radroots-nostr-connect.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
radroots-app-test-support = { path = "../test-support" }
tempfile = "3.23.0"
