[package]
name = "radroots_studio_app_core"
description = "Core application orchestration for Radroots Studio"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
chrono.workspace = true
radroots_authority.workspace = true
radroots_events.workspace = true
radroots_studio_app_view.workspace = true
radroots_local_events.workspace = true
radroots_nostr.workspace = true
radroots_runtime_paths.workspace = true
radroots_sdk.workspace = true
radroots_trade.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
radroots_core.workspace = true

[lints]
workspace = true
