[package]
name = "radroots_studio_app_remote_signer"
description = "NIP-46 remote signer adapter for Radroots Studio"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
nostr = "0.44.2"
radroots_identity.workspace = true
radroots_nostr.workspace = true
radroots_nostr_connect.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.48", features = ["sync", "time"] }
url = "2.5"

[dev-dependencies]
tempfile = "3.23.0"
