[package]
name = "radroots_studio_app_state"
description = "Application state model for Radroots Studio"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
radroots_studio_app_view.workspace = true
radroots_studio_app_sync.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
