[package]
name = "radroots_studio_app_sqlite"
description = "SQLite persistence adapter for Radroots Studio"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
radroots_core.workspace = true
radroots_events.workspace = true
radroots_events_codec.workspace = true
radroots_local_events.workspace = true
radroots_studio_app_view.workspace = true
radroots_studio_app_sync.workspace = true
radroots_sql_core.workspace = true
radroots_trade.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
