[package]
name = "radroots_studio_app_sqlite"
description = "SQLite persistence adapter for Radroots Studio"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
radroots_core.workspace = true
radroots_event.workspace = true
radroots_event_codec.workspace = true
radroots_runtime_store.workspace = true
radroots_studio_app_view.workspace = true
radroots_studio_app_sync.workspace = true
radroots_sql_core.workspace = true
radroots_trade.workspace = true
futures-executor.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true

[features]
test-support = []

[dev-dependencies]
toml.workspace = true

[lints]
workspace = true
