[package]
name = "radroots_studio_app_sync"
description = "Runtime sync adapter for Radroots Studio"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
radroots_events.workspace = true
radroots_studio_app_view.workspace = true
radroots_sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
