[package]
name = "radroots_studio_app_test_support"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rad Roots app test support"
publish = false

[lints]
workspace = true

[dependencies]
radroots_identity.workspace = true
