[package]
name = "radroots_studio_app_types"
description = "Shared application types for Radroots Studio"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
uuid.workspace = true

[lints]
workspace = true
