[package]
name = "radroots-app-ui-core"
authors = ["Radroots Authors"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
  "Document",
  "Element",
  "EventTarget",
  "HtmlElement",
  "KeyboardEvent",
  "PointerEvent",
  "Window"
] }
