[package]
name = "radroots-app-ui-primitives"
authors = ["Radroots Authors"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
radroots-app-ui-core = { path = "../ui-core" }
leptos = { workspace = true, features = ["csr"] }
ui-primitives-core = { path = "../../refs/ui-primitives/crates/ui-primitives-core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
send_wrapper = { workspace = true }
web-sys = { workspace = true, features = [
  "CssStyleDeclaration",
  "Document",
  "Element",
  "EventTarget",
  "HtmlCollection",
  "HtmlBodyElement",
  "FocusEvent",
  "HtmlElement",
  "KeyboardEvent",
  "Node",
  "NodeList",
  "PointerEvent",
  "Window"
] }
