[package]
name = "radroots-app-ui-primitives"
authors = ["Radroots Authors"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
ui-primitives-core = { path = "../../refs/ui-primitives/crates/ui-primitives-core" }
ui-primitives-leptos = { path = "../../refs/ui-primitives/crates/ui-primitives-leptos" }
