[package]
name = "radroots-app-ui-primitives"
authors = ["Radroots Authors"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
ui-primitives-core = { package = "headless-primitives-core", path = "../../../../../../vendor/triesap/headless-primitives/crates/headless-primitives-core" }
ui-primitives-leptos = { package = "headless-primitives-leptos", path = "../../../../../../vendor/triesap/headless-primitives/crates/headless-primitives-leptos" }
