[package]
name = "radroots-app-utils"
authors = ["Radroots Authors"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
radroots-types = { workspace = true }
getrandom = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde_json = { workspace = true }
