[package]
name = "radroots-app-utils"
authors = ["Radroots Authors"]
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
radroots-types = { workspace = true }
getrandom = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
