[package]
name = "radroots_studio_app_view"
description = "View-model layer for Radroots Studio"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
radroots_core.workspace = true
radroots_events.workspace = true
radroots_studio_app_types.workspace = true
radroots_trade.workspace = true
serde.workspace = true
url = "2"

[dev-dependencies]
uuid.workspace = true

[lints]
workspace = true
