[package]
name = "radroots-app-web"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rad Roots web launcher"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { workspace = true, features = ["wgpu"] }
log.workspace = true
radroots-app-core = { path = "../core" }
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
nostr.workspace = true
nostr-browser-signer.workspace = true
wgpu = { workspace = true, features = ["std", "wgsl", "webgpu", "fragile-send-sync-non-atomic-wasm"] }

[lints]
workspace = true
