[package]
name = "radroots-app-apple-security"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rad Roots Apple security bridge"
publish = false

[dependencies]
radroots-identity.workspace = true
radroots-nostr-accounts.workspace = true
zeroize.workspace = true

[lints.rust]
unsafe_code = { level = "allow", priority = 1 }
