[package]
name = "radroots_studio_app_desktop"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rad Roots desktop launcher"
publish = false
build = "build.rs"

[lints]
workspace = true

[dependencies]
eframe = { workspace = true, features = ["wgpu", "wayland", "x11"] }
egui.workspace = true
image.workspace = true
log.workspace = true
radroots_studio_app_core = { path = "../../shared/core" }
radroots_studio_app_remote_signer = { path = "../../shared/remote_signer" }
radroots_geocoder.workspace = true
radroots_nostr_accounts = { workspace = true, features = ["memory-vault"] }
radroots_runtime_paths.workspace = true
zeroize.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
wgpu = { workspace = true, features = ["metal", "wgsl"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { workspace = true, features = ["NSProcessInfo", "NSString"] }
radroots_studio_app_apple_security.workspace = true
radroots_identity.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
wgpu = { workspace = true, features = ["dx12", "wgsl"] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
wgpu = { workspace = true, features = ["vulkan", "gles", "wgsl"] }

[dev-dependencies]
radroots_studio_app_test_support = { path = "../../shared/test_support" }
